tests/rosetta/out/C/active-directory-connect.error
cc: exit status 1
/tmp/active-directory-connect.c: In function ‘connect’:
/tmp/active-directory-connect.c:59:26: error: ‘l_d_a_p_client_t’ {aka ‘struct l_d_a_p_client_t’} has no member named ‘host’; did you mean ‘Host’?
   59 |   return (strcmp(client->host, "") != 0) && client->port > 0;
      |                          ^~~~
      |                          Host
/tmp/active-directory-connect.c:59:53: error: ‘l_d_a_p_client_t’ {aka ‘struct l_d_a_p_client_t’} has no member named ‘port’; did you mean ‘Port’?
   59 |   return (strcmp(client->host, "") != 0) && client->port > 0;
      |                                                     ^~~~
      |                                                     Port
/tmp/active-directory-connect.c: In function ‘mochi_main’:
/tmp/active-directory-connect.c:69:8: error: ‘l_d_a_p_client_t’ {aka ‘struct l_d_a_p_client_t’} has no member named ‘base’; did you mean ‘Base’?
   69 |       .base = "dc=example,dc=com",
      |        ^~~~
      |        Base
/tmp/active-directory-connect.c:70:8: error: ‘l_d_a_p_client_t’ {aka ‘struct l_d_a_p_client_t’} has no member named ‘host’; did you mean ‘Host’?
   70 |       .host = "ldap.example.com",
      |        ^~~~
      |        Host
/tmp/active-directory-connect.c:71:8: error: ‘l_d_a_p_client_t’ {aka ‘struct l_d_a_p_client_t’} has no member named ‘port’; did you mean ‘Port’?
   71 |       .port = 389,
      |        ^~~~
      |        Port
/tmp/active-directory-connect.c:72:8: error: ‘l_d_a_p_client_t’ {aka ‘struct l_d_a_p_client_t’} has no member named ‘use_s_s_l’
   72 |       .use_s_s_l = 0,
      |        ^~~~~~~~~
/tmp/active-directory-connect.c:73:8: error: ‘l_d_a_p_client_t’ {aka ‘struct l_d_a_p_client_t’} has no member named ‘bind_d_n’
   73 |       .bind_d_n = "uid=readonlyuser,ou=People,dc=example,dc=com",
      |        ^~~~~~~~
/tmp/active-directory-connect.c:74:8: error: ‘l_d_a_p_client_t’ {aka ‘struct l_d_a_p_client_t’} has no member named ‘bind_password’; did you mean ‘BindPassword’?
   74 |       .bind_password = "readonlypassword",
      |        ^~~~~~~~~~~~~
      |        BindPassword
/tmp/active-directory-connect.c:75:8: error: ‘l_d_a_p_client_t’ {aka ‘struct l_d_a_p_client_t’} has no member named ‘user_filter’; did you mean ‘UserFilter’?
   75 |       .user_filter = "(uid=%s)",
      |        ^~~~~~~~~~~
      |        UserFilter
/tmp/active-directory-connect.c:76:8: error: ‘l_d_a_p_client_t’ {aka ‘struct l_d_a_p_client_t’} has no member named ‘group_filter’; did you mean ‘GroupFilter’?
   76 |       .group_filter = "(memberUid=%s)",
      |        ^~~~~~~~~~~~
      |        GroupFilter
/tmp/active-directory-connect.c:77:8: error: ‘l_d_a_p_client_t’ {aka ‘struct l_d_a_p_client_t’} has no member named ‘attributes’; did you mean ‘Attributes’?
   77 |       .attributes = tmp1};
      |        ^~~~~~~~~~
      |        Attributes
/tmp/active-directory-connect.c:79:56: error: ‘l_d_a_p_client_t’ {aka ‘struct l_d_a_p_client_t’} has no member named ‘host’; did you mean ‘Host’?
   79 |     char *tmp2 = concat_string("Connected to ", client.host);
      |                                                        ^~~~
      |                                                        Host
