tests/rosetta/out/C/active-directory-connect.c
// Generated by Mochi compiler v0.10.30 on 2025-07-18T17:11:44Z
// Generated by Mochi compiler v0.10.30 on 2025-07-18T17:11:44Z
#include <stdio.h>
#include <stdlib.h>
#include <string.h>

typedef struct {
  int len;
  char **data;
} list_string;
static list_string list_string_create(int len) {
  list_string l;
  l.len = len;
  l.data = calloc(len, sizeof(char *));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}
static char *concat_string(char *a, char *b) {
  size_t len1 = strlen(a);
  size_t len2 = strlen(b);
  char *buf = (char *)malloc(len1 + len2 + 1);
  memcpy(buf, a, len1);
  memcpy(buf + len1, b, len2);
  buf[len1 + len2] = '\0';
  return buf;
}
typedef struct l_d_a_p_client_t l_d_a_p_client_t;

typedef struct l_d_a_p_client_t {
  char *Base;
  char *Host;
  int Port;
  int UseSSL;
  char *BindDN;
  char *BindPassword;
  char *UserFilter;
  char *GroupFilter;
  list_string Attributes;
} l_d_a_p_client_t;
typedef struct {
  int len;
  l_d_a_p_client_t *data;
} l_d_a_p_client_list_t;
l_d_a_p_client_list_t create_l_d_a_p_client_list(int len) {
  l_d_a_p_client_list_t l;
  l.len = len;
  l.data = calloc(len, sizeof(l_d_a_p_client_t));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}

int connect(l_d_a_p_client_t *client) {
  return (strcmp(client->host, "") != 0) && client->port > 0;
}

int mochi_main() {
  list_string tmp1 = list_string_create(4);
  tmp1.data[0] = "givenName";
  tmp1.data[1] = "sn";
  tmp1.data[2] = "mail";
  tmp1.data[3] = "uid";
  __auto_type client = (l_d_a_p_client_t){
      .base = "dc=example,dc=com",
      .host = "ldap.example.com",
      .port = 389,
      .use_s_s_l = 0,
      .bind_d_n = "uid=readonlyuser,ou=People,dc=example,dc=com",
      .bind_password = "readonlypassword",
      .user_filter = "(uid=%s)",
      .group_filter = "(memberUid=%s)",
      .attributes = tmp1};
  if (connect(&client)) {
    char *tmp2 = concat_string("Connected to ", client.host);
    printf("%s\n", tmp2);
  } else {
    printf("Failed to connect\n");
  }
}

int _mochi_main() {
  mochi_main();
  return 0;
}
int main() { return _mochi_main(); }
